<resources>
    <string name="app_name">隐私保险箱</string>

    <string name="action_settings">Settings</string>
    <string name="picture">图片</string>
    <string name="movie">视频</string>
    <string name="audio">音频</string>
    <string name="document">文件</string>
    <string name="password">密码本</string>
    <string name="default_picture">共 0 张图片</string>
    <string name="default_movie">共 0 个视频</string>
    <string name="default_audio">共 0 个音频</string>
    <string name="default_document">共 0 个文件</string>
    <string name="default_password">已加密</string>

    <!-- Accessibility description sent when user starts drawing a lock pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_start">Pattern started</string>
    <!-- Accessibility description sent when the pattern times out and is cleared. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_cleared">Pattern cleared</string>
    <!-- Accessibility description sent when user adds a cell to the pattern. [CHAR LIMIT=NONE]  -->
    <string name="lockscreen_access_pattern_cell_added">Cell added</string>
    <!-- Accessibility description sent when user completes drawing a pattern. [CHAR LIMIT=NONE] -->
    <string name="lockscreen_access_pattern_detected">Pattern completed</string>
</resources>
