<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical" tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <!-- 图片  -->
    <LinearLayout
        android:id="@+id/ll_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/picture"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/picture"
                style="@style/myTextView_top"/>
            <!--在代码中实现，默认为 共0张图片，如果有图片，则要加上占用的容量-->
            <TextView
                android:id="@+id/tv_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myTextView_bottom"
                android:text="@string/default_picture"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 视频 -->
    <LinearLayout
        android:id="@+id/ll_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/movie"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                style="@style/myTextView_top"/>

            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myTextView_bottom"
                android:text="@string/default_movie"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 音频 -->
    <LinearLayout
        android:id="@+id/ll_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/audio"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                style="@style/myTextView_top"/>

            <TextView
                android:id="@+id/tv_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myTextView_bottom"
                android:text="@string/default_audio"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 文件 -->
    <LinearLayout
        android:id="@+id/ll_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/document"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/document"
                style="@style/myTextView_top"/>

            <TextView
                android:id="@+id/tv_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myTextView_bottom"
                android:text="@string/default_document"/>
        </LinearLayout>
    </LinearLayout>
    <!-- 密码本 -->
    <LinearLayout
        android:id="@+id/ll_passwordBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/password"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                style="@style/myTextView_top"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/myTextView_bottom"
                android:text="@string/default_password"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
